@@ -5,33 +5,33 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 public class UserPrincipal implements UserDetails {
-    private final Optional<Utilisateur> utilisateur;
+    private final Utilisateur utilisateur;
 
-    public UserPrincipal(Optional<Utilisateur> user) {
-        this.utilisateur = user;
+    public UserPrincipal(Utilisateur utilisateur) {
+        this.utilisateur = utilisateur;
+    }
+
+    public Optional<Utilisateur> getUtilisateur() {
+        return Optional.ofNullable(utilisateur);
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        String roleName = String.valueOf(utilisateur.get().getRole());
-        if (!roleName.startsWith("ROLE_")) {
-            roleName = "ROLE_" + roleName;
-        }
-        return Collections.singletonList(new SimpleGrantedAuthority(roleName));
+        return List.of(new SimpleGrantedAuthority("ROLE_" + utilisateur.getRole().name()));
     }
 
     @Override
     public String getPassword() {
-        return  String.valueOf(utilisateur.get().getPassword());
+        return utilisateur.getPassword();
     }
 
     @Override
     public String getUsername() {
-        return String.valueOf(utilisateur.get().getEmail());
+        return utilisateur.getEmail();
     }
 
     @Override
